--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     <br>1155 Walker Ave</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Walnut Creek, CA 94596</h3>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>Stylish Living in the Heart of Town While Surrounded by Private, Parkland Grounds.</strong><br><br>Centrally located. this lovely single level home of approx. 1540 square feet with three bedrooms and two baths plus two bonus rooms has been beautifully remodeled and updated.<br><br><strong>Offered at: $1,079,950</strong><br><br><strong>Open House this Saturday and Sunday 1 to 4 pm</strong></p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>Stylish Living in the Heart of Town While Surrounded by Private, Parkland Grounds.</strong><br><br>Centrally located. this lovely single level home of approx. 1540 square feet with three bedrooms and two baths plus two bonus rooms has been beautifully remodeled and updated.<br><br><strong>Offered at: $1,179,950</strong><br><br><strong>Open House this Saturday and Sunday 1 to 4 pm</strong></p>
                 
             </div>
         </div>
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rIYK7rZv5a" id="gallery1-5">
+<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rIYK7rZv5a" id="gallery1-5">
 
     
 
@@ -159,7 +159,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-8">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJzzx7e8ZhhYARS4-Wk49hKDo" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJzzx7e8ZhhYARS4-Wk49hKDo" allowfullscreen=""></iframe></div>
         </div>
     </div>
 </div></section>
