--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rIYK7rZv5a" id="gallery1-5">
+<section class="engine"><a href="https://mobirise.info/f">easy web creator</a></section><section class="mbr-gallery mbr-slider-carousel cid-rIYK7rZv5a" id="gallery1-5">
 
     
 
@@ -112,7 +112,7 @@
                 <ul>
                     <li><strong>Downtown</strong>&nbsp;is minutes walking to <a href="https://www.visitwalnutcreek.org/shopping/">Shopping</a>, <a href="https://www.visitwalnutcreek.org/dining/">Dining</a>, <a href="https://www.visitwalnutcreek.org/activities/">Activities</a>, and <a href="http://www.visitwalnutcreek.org/walnut-creek-annual-art-and-wine-festival/">Events</a>.</li>
                     <li><strong>Nature</strong>&nbsp;is minutes walking to Homestead access trail to <strong><a href="http://www.wcosf.org/enjoy/maps.html">Shell Ridge Open Space</a></strong>&nbsp;and <a href="https://www.ebparks.org/parks/trails/iron_horse/">Iron Horse Regional Trail</a> for hiking, dog walking, and mountain biking, Also close to <a href="https://www.parks.ca.gov/?page_id=517">Mount Diablo State Park</a>&nbsp;and <a href="https://www.ebparks.org/parks/briones/default.htm">Briones Regional Park</a>.</li>
-                    <li><strong>BART</strong>&nbsp; station is minutes away.</li><li><strong>Freeway</strong>&nbsp;access to Highway 24 to Oakland / San Francisco and Interstate 680.</li>
+                    <li><strong>BART</strong>&nbsp;station is minutes away.</li><li><strong>Freeway</strong>&nbsp;access to Highway 24 to Oakland / San Francisco and Interstate 680.</li>
                 </ul>
             </div>
         </div>
@@ -159,7 +159,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-8">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJzzx7e8ZhhYARS4-Wk49hKDo" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJzzx7e8ZhhYARS4-Wk49hKDo" allowfullscreen=""></iframe></div>
         </div>
     </div>
 </div></section>
