--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     <br>1155 Walker Ave</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Walnut Creek, CA 94596</h3>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>Stylish Living in the Heart of Town While Surrounded by Private, Parkland Grounds.</strong><br><br>Centrally located. this lovely single level home of approx. 1540 square feet with three bedrooms and two baths plus two bonus rooms has been beautifully remodeled and updated.<br><br><strong>Offered at: $1,179,950</strong><br><br><strong>Open House this Saturday and Sunday 1 to 4 pm</strong></p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>Stylish Living in the Heart of Town While Surrounded by Private, Parkland Grounds.</strong><br><br>Centrally located. this lovely single level home of approx. 1540 square feet with three bedrooms and two baths plus two bonus rooms has been beautifully remodeled and updated.<br><br><strong>Offered at: $1,079,950</strong><br><br><strong>Open House this Saturday and Sunday 1 to 4 pm</strong></p>
                 
             </div>
         </div>
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web creator</a></section><section class="mbr-gallery mbr-slider-carousel cid-rIYK7rZv5a" id="gallery1-5">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-gallery mbr-slider-carousel cid-rIYK7rZv5a" id="gallery1-5">
 
     
 
